Examples moved to separated modules.